--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,8 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.40
+aiosqlite==0.20.0
+greenlet==3.0.3
 starlette==0.46.1
 typing-inspection==0.4.0
 typing_extensions==4.13.1
